<resources>
    <string name="app_name">Crypton</string>

    <string name="title_crypto_currency">Coins</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="action_fav">Favorite this currency.</string>
    <string name="logout">Log Out</string>
    <string name="perform_search">Search The Coin</string>
    <string name="navigation_currency">All the coins</string>
    <string name="navigation_exchange">Exchange coins</string>
    <string name="navigation_wallet">All favorite coins</string>
    <string name="add_to_favorite">Add to favorite.</string>
    <string name="bottom_navigation_bar">Bottom Navigation Bar.</string>
    <string name="bottom_navigation_pager">Bottom Navigation Pager</string>
    <string name="progress_bar">Progress bar</string>
    <string name="app_logo">Application Logo</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Register</string>
    <string name="empty_widget_text">You are not logged in.</string>
    <string name="widget_coin_image">Coin Imae</string>
    <string name="widget_item_name">Coin Name</string>
    <string name="coin_value_hint">Enter coin value.</string>
    <string name="coin_to_convert">Coin to convert</string>
    <string name="coin_to_convert_into">Coin to convert into</string>
    <string name="exchange_to">To</string>
    <string name="exchange_value">Exchange value</string>
    <string name="exchange_bottom_text">Exchange</string>
    <string name="exchange_result">Exchange result</string>
    <string name="profile_text">Profile</string>
    <string name="app_toolbar_description">App Toolbar</string>
    <string name="detail_coin_image">Coin Image</string>
    <string name="btc_value">BTC</string>
    <string name="card_view_pricing_text">Price</string>
    <string name="usd_value">USD</string>
    <string name="eur_value">EUR</string>
    <string name="coin_overview">Overview</string>
    <string name="coin_name">Name</string>
    <string name="coin_symbol">Symbol</string>
    <string name="coin_coinname">Coin Name</string>
    <string name="coin_fullname">Full Name</string>
    <string name="coin_algorithm">Algorithm</string>
    <string name="coin_prooftype">Prooftype</string>
    <string name="coin_fullpremined">Fully Premined</string>
    <string name="coin_total_supply">Total Supply</string>
    <string name="coin_premined_value_value">Premined Value</string>
    <string name="coin_total_free_float">Total Free Float</string>
    <string name="coin_istrading">Trading</string>
    <string name="coin_moreinfo">More Info</string>
    <string name="is_not_trading">No</string>
    <string name="is_trading">Yes</string>
    <string name="coin_image_view_transition">coin_image_view_transition</string>
    <string name="floating_action_button_behavior">com.example.bios.crypton.behavior.ScrollAwareFABBehavior</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="show_toast_error_message">Toast Error</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Add To Wallet</string>
    <string name="empty_email">Enter Email Address!</string>
    <string name="empty_password">Enter Password!</string>
    <string name="password_length">Your password is too short!</string>
    <string name="emnter_registered_email">Enter your registered email id!</string>
    <string name="sent_reset_mail">We have sent you instructions to reset your password!</string>
    <string name="failed_sending_reset_email">Failed to send reset email!</string>
    <string name="no_internet">No Internet</string>
    <string name="n_a">N/A</string>
    <string name="is_trading_false">false</string>
    <string name="added_to_wallet">Added To Your Wallet</string>
    <string name="hifen">-</string>


</resources>
