<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_currency"
        android:contentDescription="@string/navigation_currency"
        android:icon="@drawable/ic_bitcoin"
        android:title="@string/title_crypto_currency" />

    <item
        android:id="@+id/navigation_exchange"
        android:contentDescription="@string/navigation_exchange"
        android:icon="@drawable/ic_exchange"
        android:title="@string/title_exchange" />

    <item
        android:id="@+id/navigation_wallet"
        android:contentDescription="@string/navigation_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/title_wallet" />

    <!-- <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_user"
         android:title="@string/title_profile" />-->

</menu>