<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/coin_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/coin_value_hint"
                android:nextFocusDown="@id/spinner_from_coin"
                android:nextFocusForward="@id/spinner_from_coin"
                android:nextFocusUp="@id/button_exchange_value"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_from_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/coin_to_convert"
                android:nextFocusDown="@id/spinner_to_coin"
                android:nextFocusForward="@id/spinner_to_coin"
                android:nextFocusUp="@id/coin_value">

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/exchange_to" />

            <Spinner
                android:id="@+id/spinner_to_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/coin_to_convert_into"
                android:nextFocusDown="@id/button_exchange_value"
                android:nextFocusForward="@id/button_exchange_value"
                android:nextFocusUp="@id/spinner_from_coin">

            </Spinner>

            <Button
                android:id="@+id/button_exchange_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/exchange_value"
                android:nextFocusDown="@id/coin_value"
                android:nextFocusForward="@id/coin_value"
                android:nextFocusUp="@id/spinner_to_coin"
                android:text="@string/exchange_bottom_text" />

            <TextView
                android:id="@+id/result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/exchange_result"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>